--- a/photo.html
+++ b/photo.html
@@ -8,7 +8,7 @@
     <title>Croissant Photo</title>
   </head>
   <body>
-    <img src="/img/croissant.jpeg" width="400" />
+    <img src="/img/croissant.jpeg" width="400" class="croissant-photo" />
     <footer>
       <a href="/" title="Home">Homepage</a>
       <a href="/photo.html" title="Croissant photo">Photo</a>
