added h1 to photo.html; changed p. line height

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>🥐Croissant</h1>
-    <p>
+    <p class="about-paragraph">
       Croissants are named for their historical crescent shape, the dough is
       layered with butter, rolled and folded several times in succession, then
       rolled into a thin sheet, in a technique called laminating. The process
