--- a/photo.html
+++ b/photo.html
@@ -8,6 +8,7 @@
     <title>Croissant Photo</title>
   </head>
   <body>
+    <h1>His delicious majesty...Croissant</h1>
     <img src="/img/croissant.jpeg" width="400" class="croissant-photo" />
     <footer>
       <a href="/" title="Home">Homepage</a>
