changed color for order-link

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,11 @@
     <h1>🥐 Contact us</h1>
     <p>
       Keep in touch with Superb Croissant at
-      <a href="mailto:order@croissant.com" title="contact us by email">
+      <a
+        href="mailto:order@croissant.com"
+        title="contact us by email"
+        class="oder-link"
+      >
         order@croissant.com
       </a>
     </p>
