fix typo in order-link

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
       <a
         href="mailto:order@croissant.com"
         title="contact us by email"
-        class="oder-link"
+        class="order-link"
       >
         order@croissant.com
       </a>
