seo(named links, named photo,meta description)

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="You can feel better all the time when you come to our bakery store."
+    />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>The best croissant at Superb-croissant.com></title>
+    <title>The best bakery in the city-Superb Croissant></title>
   </head>
   <body>
     <h1>🥐Croissant</h1>
@@ -16,9 +20,9 @@
       results in a layered, flaky texture, similar to a puff pastry.
     </p>
     <footer>
-      <a href="/" title="Home">Homepage</a>
-      <a href="/photo.html" title="Croissant photo">Photo</a>
-      <a href="/contact.html" title="ContactCroissant.com">Contact</a>
+      <a href="/" title="Superb Croissant.com">Homepage</a>
+      <a href="/photo.html" title="Superb Croissant Gallery">Photo</a>
+      <a href="/contact.html" title="Order Superb Croissant">Contact</a>
     </footer>
   </body>
 </html>
