--- a/contact.html
+++ b/contact.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="You can feel better all the time when you come to our bakery store."
+    />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Contact Superb Croissant</title>
+    <title>The best bakery in the city-Superb Croissant></title>
   </head>
   <body>
-    <h1>🥐 Contact us</h1>
-    <p>
-      Keep in touch with Superb Croissant at
-      <a
-        href="mailto:order@croissant.com"
-        title="contact us by email"
-        class="order-link"
-      >
-        order@croissant.com
-      </a>
+    <h1>🥐Croissant</h1>
+    <p class="about-paragraph">
+      Croissants are named for their historical crescent shape, the dough is
+      layered with butter, rolled and folded several times in succession, then
+      rolled into a thin sheet, in a technique called laminating. The process
+      results in a layered, flaky texture, similar to a puff pastry.
     </p>
     <footer>
-      <a href="/" title="Home">Homepage</a>
-      <a href="/photo.html" title="Croissant photo">Photo</a>
-      <a href="/contact.html" title="ContactCroissant.com">Contact</a>
+      <a href="/" title="Superb Croissant.com">Homepage</a>
+      <a href="/photo.html" title="Superb Croissant Gallery">Photo</a>
+      <a href="/contact.html" title="Order Superb Croissant">Contact</a>
     </footer>
   </body>
 </html>
