--- a/photo.html
+++ b/photo.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="You can choose the best croissant" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Croissant Photo</title>
+    <title>Superb Croissant Photo</title>
   </head>
   <body>
     <h1 class="photo-header">His delicious majesty...Croissant</h1>
-    <img src="/img/croissant.jpeg" width="400" class="croissant-photo" />
+    <img
+      src="/img/croissant.jpeg"
+      width="400"
+      alt="tasty croissant"
+      class="croissant-photo"
+    />
     <footer>
       <a href="/" title="Home">Homepage</a>
       <a href="/photo.html" title="Croissant photo">Photo</a>
