--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
     <title>The best bakery in the city-Superb Croissant></title>
+    <meta
+      name="sitecheckerpro-site-verification"
+      content="55c46caa9b798ffc95ec107b97c59b7b"
+    />
   </head>
   <body>
     <h1>🥐Croissant</h1>
